--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,18 @@
 secrets.yaml
 *.log
+*.log.txt
 *.xml
 *.db
 *.sqlite
 .storage/
-OZW_Log.txt
 harmony_harmony_hub.conf
 known_devices.yaml
+.ssh
+.storage
+.cloud
+.google.token
+home-assistant.log*
+id_rsa*
+custom_components/
+home-assistant_v2
+home-assistant.log
