--- a/esphome/esphome-web-3040f7.yaml
+++ b/esphome/esphome-web-3040f7.yaml
@@ -40,13 +40,13 @@ wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_password
 
-  manual_ip:
-    # Set this to the IP of the ESP
-    static_ip: 10.10.1.62
-    # Set this to the IP address of the router. Often ends with .1
-    gateway: !secret wifigateway
-    # The subnet of the network. 255.255.255.0 works for most home networks.
-    subnet: !secret wifisubnet
+  # manual_ip:
+  #   # Set this to the IP of the ESP
+  #   static_ip: 10.10.1.64
+  #   # Set this to the IP address of the router. Often ends with .1
+  #   gateway: !secret wifigateway
+  #   # The subnet of the network. 255.255.255.0 works for most home networks.
+  #   subnet: !secret wifisubnet
 
   # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
@@ -55,11 +55,14 @@ wifi:
 
 captive_portal:
 
+web_server:
+  port: 80
+
 
 light:
   - platform: monochromatic
     output: relay_dimmer
-    name: $friendly_name
+    name: light
     gamma_correct: 1
     default_transition_length: 0s
     id: dimmer
@@ -78,7 +81,7 @@ output:
 binary_sensor:
   - platform: gpio
     pin: 
-      number: 5
+      number: 4
       mode: INPUT_PULLUP
     id: spst_switch
     internal: true
@@ -87,10 +90,10 @@ binary_sensor:
       #- delayed_on_off: 100ms
     on_press:
       then:
-        - logger.log: "1"
+        - logger.log: "GPIO4 1"
     on_release:
       then:
-        - logger.log: "0"
+        - logger.log: "GPIO4 0"
     on_multi_click:
     - timing:
         - ON for at most 600ms
@@ -108,6 +111,51 @@ binary_sensor:
         - ON for at least 600ms
       then:
         - script.execute: switch_script
+  - platform: gpio
+    pin: 
+      number: 5
+      mode: INPUT_PULLUP
+    id: spst_switch5
+    internal: true
+    #filters:
+      #- delayed_off: 100ms
+      #- delayed_on_off: 100ms
+    on_press:
+      then:
+        - logger.log: "GPIO5 1"
+    on_release:
+      then:
+        - logger.log: "GPIO5 0"
+  - platform: gpio
+    pin: 
+      number: 9
+      mode: INPUT_PULLUP
+    id: spst_switch9
+    internal: true
+    #filters:
+      #- delayed_off: 100ms
+      #- delayed_on_off: 100ms
+    on_press:
+      then:
+        - logger.log: "GPIO9 1"
+    on_release:
+      then:
+        - logger.log: "GPIO9 0"
+  - platform: gpio
+    pin: 
+      number: 10
+      mode: INPUT_PULLUP
+    id: spst_switch10
+    internal: true
+    #filters:
+      #- delayed_off: 100ms
+      #- delayed_on_off: 100ms
+    on_press:
+      then:
+        - logger.log: "GPIO10 1"
+    on_release:
+      then:
+        - logger.log: "GPIO10 0"
         
 
 script:
