--- a/automations.yaml
+++ b/automations.yaml
@@ -1,1 +1,22 @@
-[]
+- id: '1705311099372'
+  alias: Solcast update
+  description: ''
+  trigger:
+  - platform: template
+    value_template: "{% set nr = as_datetime(state_attr('sun.sun','next_rising'))
+      | as_local %} {% set ns = as_datetime(state_attr('sun.sun','next_setting'))
+      | as_local %} {% set api_request_limit = 8 %} {% if nr > ns %}\n  {% set nr
+      = nr - timedelta(hours = 24) %} \n{% endif %} {% set hours_difference = (ns
+      - nr) %} {% set interval_hours = hours_difference / api_request_limit %} {%
+      set ns = namespace(match = false) %} {% for i in range(api_request_limit) %}\n
+      \ {% set start_time = nr + (i * interval_hours) %}\n  {% if ((start_time - timedelta(seconds=30))
+      <= now()) and (now() <= (start_time + timedelta(seconds=30))) %}\n    {% set
+      ns.match = true %}\n  {% endif %}\n{% endfor %} {{ ns.match }}"
+  condition:
+  - condition: sun
+    before: sunset
+    after: sunrise
+  action:
+  - service: solcast_solar.update_forecasts
+    data: {}
+  mode: single
