--- a/esphome/tcp-socket-2.yaml
+++ b/esphome/tcp-socket-2.yaml
@@ -1,8 +1,8 @@
 # Basic Config
 substitutions:
-  lowercase_name: livingroom-4ch
-  friendly_name: Livingroom Sonoff 4ch
-  static_ip: 10.10.1.67
+  lowercase_name: tcp-socket-2
+  friendly_name: TCP Socket 2
+  static_ip: 10.10.1.72
 
 esphome:
   name: ${lowercase_name}
@@ -56,64 +56,25 @@ web_server:
 # Device Specific Config
 status_led:
   pin:
-    number: GPIO13
+    number: GPIO4
     inverted: True
     
 binary_sensor:
   - platform: gpio
     pin:
-      number: GPIO0
+      number: GPIO13
       mode: INPUT_PULLUP
       inverted: True
-    name: "Sonoff 4CH Button 1"
+    name: "Button"
     on_press:
-      - switch.toggle: "relay_1"
-    internal: true
-  - platform: gpio
-    pin:
-      number: GPIO9
-      mode: INPUT_PULLUP
-      inverted: True
-    name: "Sonoff 4CH Button 2"
-    on_press:
-      - switch.toggle: "relay_2"
-    internal: true
-  - platform: gpio
-    pin:
-      number: GPIO10
-      mode: INPUT_PULLUP
-      inverted: True
-    name: "Sonoff 4CH Button 3"
-    on_press:
-      - switch.toggle: "relay_3"
-    internal: true
-  - platform: gpio
-    pin:
-      number: GPIO14
-      mode: INPUT_PULLUP
-      inverted: True
-    name: "Sonoff 4CH Button 4"
-    on_press:
-      - switch.toggle: "relay_4"
+      - switch.toggle: "relay"
     internal: true
 
   # - platform: status
-  #   name: "Sonoff 4CH Status"
+  #   name: "Status"
 
 switch:
   - platform: gpio
-    name: "Relay 1"
-    pin: GPIO12
-    id: "relay_1"
-  - platform: gpio
-    name: "Relay 2"
+    name: "Relay"
     pin: GPIO5
-    id: "relay_2"
-  - platform: gpio
-    name: "Relay 3"
-    pin: GPIO4
-    id: "relay_3"
-  - platform: gpio
-    name: "Relay 4"
-    pin: GPIO15
-    id: "relay_4"
+    id: "relay"
